[package]
name = "ruvllm_sparse_attention"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Subquadratic O(N log N) sparse attention kernel for Rust LLM inference on edge devices, with optional FastGRNN salience gating for near-linear O(N) scaling"
authors = ["ruvnet <ruv@ruv.net>"]
repository = "https://github.com/ruvnet/RuVector"
documentation = "https://docs.rs/ruvllm_sparse_attention"
homepage = "https://github.com/ruvnet/RuVector/tree/main/crates/ruvllm_sparse_attention"
readme = "README.md"
keywords = ["llm", "attention", "transformer", "inference", "edge"]
categories = ["algorithms", "science", "mathematics", "no-std"]
rust-version = "1.77"

[features]
default = ["std"]
# Use the standard library. Disable for no_std + alloc targets like
# ESP32-S3 (xtensa-esp32s3-none-elf) or RISC-V MCUs.
std = []
# Enable parallel head loops via rayon (~4× prefill speedup on multi-core).
# Requires std (rayon depends on threads).
parallel = ["std", "dep:rayon"]
# Enable FP16 KV cache (halves KV memory; requires the `half` crate).
# Works in no_std (half supports no_std).
fp16 = ["dep:half"]

[dependencies]
rayon = { version = "1", optional = true }
half = { version = "2", optional = true, default-features = false }
# libm provides f32 transcendental functions (exp, sqrt, tanh, powf) on
# no_std targets where they're not in core. With std (the default) the
# inherent f32 methods are used instead. Tiny pure-Rust crate, no system
# math library needed — works on bare-metal Xtensa, RISC-V, ARM Cortex-M.
libm = { version = "0.2", default-features = false }

[dev-dependencies]
# rand is only used in tests/benchmarks — keep zero runtime dep footprint (ADR-183)
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "attention_bench"
harness = false

[[bench]]
name = "sparse_mario_bench"
harness = false

# Research-tier crate (subquadratic attention experiments). Stylistic clippy
# lints that don't affect correctness are downgraded so the workspace
# `clippy --all-targets -D warnings` job can stay strict elsewhere.
[lints.clippy]
needless_range_loop = "allow"
if_same_then_else = "allow"
derivable_impls = "allow"
redundant_closure = "allow"
iter_cloned_collect = "allow"
doc_lazy_continuation = "allow"
