[package]
name = "sky-monitor-wasm"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Browser-facing WASM projection engine + anomaly scorer for the RuView SkyGraph dashboard (ADR-199 presentation plane). Wraps the pure (non-appliance) subset of sky-monitor."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pure subset only: coords / track / anomaly / adsb — no ruvector-core /
# ruvector-graph (those stay behind the native-only `appliance` feature).
sky-monitor = { path = "..", default-features = false }

wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Satellite layer: SGP4 propagation from TLEs (pure math, wasm-friendly);
# chrono only converts the TLE epoch to Unix time.
sgp4 = "2"
chrono = { version = "0.4", default-features = false }

# wasm-opt is a size optimization only; skip it so `wasm-pack build` works
# in offline/air-gapped environments (the appliance target) where the
# binaryen download is unavailable. Run wasm-opt manually if size matters.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

